ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-09-30 Daniel Andreca
	- LANGUAGES:
		* Updated Finnish

2009-09-30 Laurent Declercq
	- TOOLS:
		* Fixed some typo errors in webmail/src/login.php (Thx to Henriks)

2009-09-29 Daniel Andreca
	- ENGINE:
		* Fixed #2011: Daily quota script generates errors (missing db in /var/lib/mysql)
	- LANGUAGES:
		* Updated Danish

2009-09-29 Laurent Declercq
	- CONFIG:
		* Fixed #2002: openSUSE 11.1 - Unable to add mail user
		* Fixed SASL Authentication failed (openSUSE):
			- Added smtpd.conf configuration file for postfix/sasl
			- Added new variables related to MTA/SASL in /etc/ispcp/ispcp.conf (openSUSE)
	- DISTS:
		* Fixed postfix warning: "not owned by root: /var/spool/postfix" (openSUSE)
		* Fixed imapd warning related to famd (See http://www.courier-mta.org/FAQ.html#fam) (openSUSE)
		* Fixed authdaemond warning related to missing modules: "file not found" (openSUSE)
	- DOCS:
		* Updated docs/OpenSuse/install file
		* Removed support for older versions (only current stable version is supported) (openSUSE)

2009-09-28 Daniel Andreca
	- LANGUAGES:
		* Fixed small typo in es_ES.po

2009-09-27 Daniel Andreca
	- GUI:
		* Fixed #1974: Reseller properties cannot be edited after working with his domains
	- ENGINE:
		* Fixed #2009: Backups do not work

2009-09-27 Christian Hernmarck
	- ENGINE:
		* Fixed #2008: Alias + Subdomain + SubAlias: not all placeholders filled

2009-09-25 Christian Hernmarck
	- GUI:
		* Fixed Bug: error in counting subdom-aliases

2009-09-25 Blondak <blondak@neser.cz>
	- GUI:
		* Fixed #2007: Manual DNS entry should not work when no subdomains
		* Disallow add manual DNS entry for domain alias on "ordered" state

2009-09-24 Benedikt Heintel
	- GUI:
		* Fixed #2006: Delete manual DNS entry on domain aliases

2009-09-24 Laurent Declercq
	- TOOLS:
		* Integrating new theme for squirrelmail (Thank to Henriks)

2009-09-23 Benedikt Heintel
	- GUI:
		* Fixed #2001: subdomain: hostname length need >= 2 chars